recursion.cons.ismember.IsMember.scala.code
def isMember(l:List[Int], v:Int): Boolean = {
  if (l==Nil)
  	return false
  elif (v==l.head)
  	return true
  else
  	return isMember(l.tail)

}